--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3Test",
+  "name": "vue3test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,16 +12,21 @@
     "d3": "^7.8.5",
     "highcharts": "^11.1.0",
     "highcharts-vue": "^1.4.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.32.2",
     "rxjs": "^7.8.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.4"
+    "vue-facing-decorator": "^3.0.2",
+    "vue-router": "^4.2.4",
+    "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/tsconfig": "^0.4.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
@@ -38,7 +43,8 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "vue/no-unused-components": "off"
+      "vue/no-unused-components": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
