--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "paths": {
       "@/*": [
-        "src/*"
+        "./src/*"
       ]
     },
     "lib": [
