--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.69.3",
+    "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
